# MegaManXSNESRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  ENHANCEMENTS.md  ISSUES.md  MegaManXSNESRecomp-steamdeck-x86_64.7z  PLAN.md  README.md  RELEASE.md  RELEASE_NOTES_v1.2.1.md  config.ini  mmx.sln  snesrecomp.pin
.github/workflows/: build-artifacts.yml
MegaManX.app/Contents/: Info.plist
MegaManX.app/Contents/Frameworks/: libSDL2-2.0.0.dylib
MegaManX.app/Contents/MacOS/: MegaManX  MegaManXSNESRecomp
MegaManXSNESRecomp-steamdeck-x86_64/: MegaManXSNESRecomp  README.md  config.ini
docs/: WIDESCREEN.md
recomp/: bank00.cfg  bank01.cfg  bank02.cfg  bank03.cfg  bank04.cfg  bank06.cfg  bank07.cfg  bank08.cfg  funcs.h  tier2_coverage.json
recomp/launcher/: boxart.tga
scripts/: release-mac.sh
src/: config.c  config.h  gen_stubs.c  linux_ui.cpp  linux_ui.h  macos_backend.m  macos_ui.mm  main.c  mmx.vcxproj  mmx.vcxproj.filters  mmx_00.c  mmx_cpu_infra.c  mmx_display.c  mmx_display.h  mmx_rtl.c  mmx_rtl.h  mmx_spc_player.c  mmx_wide_preview.c  mmx_wide_preview.h  opengl.c  post_mortem.c  variables.h
tests/: mmx_display_test.c
tools/: align_eye.py  an_capture.py  apply_overrides.py  beat_intro_bot.py  bootstrap.sh  build-linux.sh  build-macos.sh  build-windows-mingw.sh  capture_order.py  capture_stage_phases.py  check_c3.py  ct_grep.py  dbgprobe.py  diff_pause.py  diff_timeline.py  diff_wram.py  dump_rom.py  eye_aed9_watch.py  eye_af0e.py  eye_capture.py  eye_ce9a.py  eye_ce9a_entry.py  eye_ce9a_inputs.py  eye_creation.py  eye_find.py  eye_launch.py  eye_launch_ring.py  eye_offline.py  eye_ring_probe.py  eye_scan.py  eye_staging.py  eye_struct_dump.py  eye_writers.py  find_mode_byte.py  find_oam_buf.py  find_turtle_slot.py  find_turtle_slot2.py  make-linux-appimage.sh  make_release.ps1  make_release_rmx.sh  (+19 more)
variants/jp/config/: bank00.cfg  funcs.h
